--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://web3-telegram-mini-app-a3ed56fadb26.herokuapp.com",
+  "url": "https://undergroundblock.github.io/web3-telegram-mini-app/",
   "name": "Web3 Telegram Mini App",
   "iconUrl": "https://web3-telegram-mini-app-a3ed56fadb26.herokuapp.com/logo.png"
 }
