--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "winBuild": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
     "dev": "GENERATE_SOURCEMAP=false react-scripts start",
     "start": "node server.js",
     "test": "react-scripts test",
